# Hierarchy_Ensemble

./: CMakeLists.txt  OS_specific.h  README  appTemplate.cpp  appTemplate.h  clearMOT.cpp  clearMOT.h  config.txt  dataReader.cpp  dataReader.h  detector.cpp  detector.h  fileGettor.h  main.cpp  matrix.h  multiTrackAssociation.cpp  multiTrackAssociation.h  munkres.h  parameter.h  tracker.cpp  tracker.h  util.h
